@@ -395,7 +395,7 @@
 ;; executed.
 #!+sb-show
 (defvar *show-fops-p* nil)
-
+(defvar *fasl-source-info*)
 ;;;
 ;;; a helper function for LOAD-AS-FASL
 ;;;
@@ -414,6 +414,7 @@
   ;;
   (declare (ignorable print))
   (let ((stream (%fasl-input-stream fasl-input))
+        *fasl-source-info*
         #!+sb-show (trace *show-fops-p*))
     (unless (check-fasl-header stream)
       (return-from load-fasl-group))
